Fix a bug where the search bar wont align with the header
Added some styles for the responsive menu to be usable

--- a/static/css/explore.scss
+++ b/static/css/explore.scss
@@ -341,6 +341,7 @@
 
 .search-section-container.sticky {
   position: fixed;
+  top: 60px;
   left: 0;
   background-color: var(--gm-3-ref-primary-primary-99);
   z-index: 9;
